# RecycleAI

./: README.md  app.py  classification_history.json  model.py  organize_dataset.py  pyproject.toml  render.yaml  replit.nix  requirements.txt  run_app.bat  split_dataset.py  style.css  train.py  utils.py  waste_info.py
.streamlit/: config.toml
RecycleAI-main/: LICENSE  app.py  model.py  render.yaml  requirements.txt  style.css  train.py  utils.py
RecycleAI-main/.streamlit/: config.toml
RecycleAI-main/RecycleAI-main/: .gitignore  .replit  app.py  classification_history.json  run_app.bat  style.css  waste_info.py
RecycleAI-main/RecycleAI-main/pages/: education.py
RecycleAI-main/data/: classification_history.json
RecycleAI-main/pages/: about.py  dashboard.py  education.py
attached_assets/: Pasted--Roadmap-Waste-Management-Recycling-Classification-Using-AI-1-Data-Collection-Preprocessin-1742217537787.txt  Pasted-Project-Overview-p-style-font-size-1-1rem-line-height-1-6-margin-bottom-20px-The-Was-1742220301306.txt
data/: classification_history.csv  classification_history.json
pages/: about.py  dashboard.py  education.py
